# functional-reactive-cpp

./: .clang-format  .gitignore  CMakeLists.txt  FlappyBird.cpp  README.md  engine.cpp  engine.hpp  helloworld.cpp  vcpkg.json
src/: CMakeLists.txt  FlappyBird.cpp  app.cpp  bird.cpp  bird.hpp  engine.cpp  engine.hpp  foo.cpp  game.cpp  game.hpp  main.cpp  pipes.cpp  pipes.hpp  text.cpp  text.hpp
tests/: CMakeLists.txt  test.cpp
